# nes_ebook

./: .gitignore  404.html  README.md  afterwords.html  book.toml  chapter_1.html  chapter_2.html  chapter_3.html  chapter_3_1.html  chapter_3_2.html  chapter_3_3.html  chapter_3_4.html  chapter_4.html  chapter_5.html  chapter_5_1.html  chapter_6.html  chapter_6_1.html  chapter_6_2.html  chapter_6_3.html  chapter_6_4.html  chapter_7.html  chapter_8.html  chapter_9.html  highlight.css  index.html  print.html  searchindex.js  searchindex.json  toc.html  toc.js
code/: testAll
code/ch3.1/: Cargo.toml
code/ch3.1/src/: cpu.rs  main.rs
code/ch3.2/: Cargo.toml
code/ch3.2/src/: cpu.rs  main.rs  opcodes.rs
code/ch3.3/: Cargo.toml
code/ch3.3/src/: cpu.rs  main.rs  opcodes.rs  test.rs
code/ch3.4/src/: cpu.rs  main.rs
code/ch4/src/: bus.rs  cpu.rs  main.rs
code/ch5/: Cargo.toml  snake  snake.nes
code/ch5.1/src/: bus.rs  cartridge.rs  cpu.rs  main.rs  opcodes.rs  trace.rs
code/ch5/src/: bus.rs  cartridge.rs  cpu.rs  main.rs
code/ch6.1/src/: bus.rs  cartridge.rs  cpu.rs  main.rs  snake.rs  trace.rs
code/ch6.2/src/: cartridge.rs  cpu.rs  main.rs  trace.rs
code/ch6.3/src/: bus.rs  cpu.rs  (+1 more)
images/ch7/: image_1_joypad.png.sb-61a358a6-Zcgg3i
src/: SUMMARY.md  afterwords.md  chapter_1.md  chapter_2.md  chapter_3.md  chapter_3_1.md  chapter_3_2.md  chapter_3_3.md  chapter_3_4.md  chapter_4.md  chapter_5.md  chapter_5_1.md  chapter_6.md  chapter_6_1.md  chapter_6_2.md  chapter_6_3.md  chapter_6_4.md  chapter_7.md  chapter_8.md  chapter_9.md
theme/css/: custom.css
(+39 files in other folders)
